@@ -9,6 +9,7 @@ Andrew Lannan
 astrell
 Brian Callahan (ibara)
 Bruce Hunsaker (hunsakerbn)
+bsdmp
 Carl Mueller (carlmuller)
 Carlos Pita
 Charles Kauffman
